--- a/train-Copy1.ipynb
+++ b/train-Copy1.ipynb
@@ -172,9 +172,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-04-11 10:25:35,536 SSD INFO: Start evaluating...\n",
+      "17936\n",
+      "Dataset loaded. Subset: val, number of images: 3588\n",
+      "2020-04-11 10:25:36,587 SSD.inference INFO: Evaluating waymo_val dataset(3588 images):\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 359/359 [00:17<00:00, 20.77it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-04-11 10:25:55,044 SSD.inference INFO: mAP: 0.2241\n",
+      "vehicle         : 0.3527\n",
+      "person          : 0.2167\n",
+      "sign            : nan\n",
+      "cyclist         : 0.1029\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'metrics': {'mAP': 0.2240843198741733,\n",
+       "   'vehicle': 0.35265326308389916,\n",
+       "   'person': 0.2167354375099781,\n",
+       "   'sign': nan,\n",
+       "   'cyclist': 0.10286425902864259}}]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "logger.info('Start evaluating...')\n",
     "torch.cuda.empty_cache()  # speed up evaluating after training finished\n",
