--- a/train-Copy1.ipynb
+++ b/train-Copy1.ipynb
@@ -46,8 +46,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-04-10 11:02:32,777 SSD INFO: Loaded configuration file configs/train_waymo_Copy1.yaml\n",
-      "2020-04-10 11:02:32,778 SSD INFO: \n",
+      "2020-04-11 15:26:35,088 SSD INFO: Loaded configuration file configs/train_waymo_Copy1.yaml\n",
+      "2020-04-11 15:26:35,090 SSD INFO: \n",
       "MODEL:\n",
       "    NUM_CLASSES: 5\n",
       "    BACKBONE:\n",
@@ -62,15 +62,15 @@
       "    TRAIN: (\"waymo_train\",)\n",
       "    TEST: (\"waymo_val\", )\n",
       "SOLVER:\n",
-      "    CHOICE: 'Adam'\n",
-      "    MAX_ITER: 65000\n",
-      "    LR_STEPS: [40000, 55000]\n",
-      "    GAMMA: 0.2\n",
+      "    CHOICE: 'SGD'\n",
+      "    MAX_ITER:  53000\n",
+      "    LR_STEPS: [20000, 400000]\n",
+      "    GAMMA: 0.1\n",
       "    BATCH_SIZE: 32\n",
-      "    LR: 1.5e-4\n",
-      "OUTPUT_DIR: 'outputs/res50_new_waymo_Adam_1_5e_f4' \n",
+      "    LR: 1.e-2\n",
+      "OUTPUT_DIR: 'outputs/res50_new_waymo_sgd_1e_f2_drop_block' \n",
       "DATASET_DIR: \"datasets\"\n",
-      "2020-04-10 11:02:32,779 SSD INFO: Running with config:\n",
+      "2020-04-11 15:26:35,093 SSD INFO: Running with config:\n",
       "DATASETS:\n",
       "  TEST: ('waymo_val',)\n",
       "  TRAIN: ('waymo_train',)\n",
@@ -109,14 +109,14 @@
       "  SIZE_VARIANCE: 0.2\n",
       "  THRESHOLD: 0.5\n",
       "MODEL_SAVE_STEP: 500\n",
-      "OUTPUT_DIR: outputs/res50_new_waymo_Adam_1_5e_f4\n",
+      "OUTPUT_DIR: outputs/res50_new_waymo_sgd_1e_f2_drop_block\n",
       "SOLVER:\n",
       "  BATCH_SIZE: 32\n",
-      "  CHOICE: Adam\n",
-      "  GAMMA: 0.2\n",
-      "  LR: 0.00015\n",
-      "  LR_STEPS: [40000, 55000]\n",
-      "  MAX_ITER: 65000\n",
+      "  CHOICE: SGD\n",
+      "  GAMMA: 0.1\n",
+      "  LR: 0.01\n",
+      "  LR_STEPS: [20000, 400000]\n",
+      "  MAX_ITER: 53000\n",
       "  MOMENTUM: 0.9\n",
       "  WARMUP_FACTOR: 0.3333333333333333\n",
       "  WARMUP_ITERS: 500\n",
@@ -162,7 +162,19 @@
       "Detector initialized. Total Number of params:  39.55M\n",
       "Backbone number of parameters: 37.52M\n",
       "SSD Head number of parameters: 2.03M\n",
-      "2020-04-10 11:02:37,047 SSD.trainer INFO: No checkpoint found.\n"
+      "2020-04-11 15:26:54,148 SSD.trainer INFO: No checkpoint found.\n",
+      "17936\n",
+      "Dataset loaded. Subset: train, number of images: 14348\n",
+      "2020-04-11 15:26:55,689 SSD.trainer INFO: Start training ...\n",
+      "2020-04-11 15:27:25,450 SSD.trainer INFO: iter: 000010, lr: 0.00347, total_loss: 17.760 (17.760), reg_loss: 7.084 (7.084), cls_loss: 10.676 (10.676), time: 2.788 (2.788), eta: 1 day, 17:02:37, mem: 9881M\n",
+      "2020-04-11 15:27:37,779 SSD.trainer INFO: iter: 000020, lr: 0.00360, total_loss: 13.162 (15.461), reg_loss: 6.024 (6.554), cls_loss: 7.138 (8.907), time: 1.233 (2.011), eta: 1 day, 5:35:25, mem: 9881M\n",
+      "2020-04-11 15:27:52,022 SSD.trainer INFO: iter: 000030, lr: 0.00373, total_loss: 10.711 (13.878), reg_loss: 5.568 (6.225), cls_loss: 5.143 (7.652), time: 1.424 (1.815), eta: 1 day, 2:42:31, mem: 9881M\n",
+      "2020-04-11 15:28:06,027 SSD.trainer INFO: iter: 000040, lr: 0.00387, total_loss: 9.414 (12.762), reg_loss: 5.369 (6.011), cls_loss: 4.045 (6.750), time: 1.401 (1.712), eta: 1 day, 1:10:43, mem: 9881M\n",
+      "2020-04-11 15:28:24,561 SSD.trainer INFO: iter: 000050, lr: 0.00400, total_loss: 8.544 (11.918), reg_loss: 5.163 (5.842), cls_loss: 3.381 (6.076), time: 1.853 (1.740), eta: 1 day, 1:35:28, mem: 9881M\n",
+      "2020-04-11 15:28:37,258 SSD.trainer INFO: iter: 000060, lr: 0.00413, total_loss: 7.820 (11.235), reg_loss: 4.742 (5.658), cls_loss: 3.078 (5.577), time: 1.270 (1.662), eta: 1 day, 0:26:01, mem: 9881M\n",
+      "2020-04-11 15:28:49,529 SSD.trainer INFO: iter: 000070, lr: 0.00427, total_loss: 7.670 (10.726), reg_loss: 4.632 (5.512), cls_loss: 3.038 (5.214), time: 1.227 (1.599), eta: 23:31:00, mem: 9881M\n",
+      "2020-04-11 15:28:59,177 SSD.trainer INFO: iter: 000080, lr: 0.00440, total_loss: 7.389 (10.309), reg_loss: 4.442 (5.378), cls_loss: 2.946 (4.931), time: 0.965 (1.520), eta: 22:20:46, mem: 9881M\n",
+      "2020-04-11 15:29:18,205 SSD.trainer INFO: iter: 000090, lr: 0.00453, total_loss: 7.155 (9.958), reg_loss: 4.239 (5.252), cls_loss: 2.915 (4.707), time: 1.903 (1.563), eta: 22:58:00, mem: 9881M\n"
      ]
     }
    ],
@@ -172,53 +184,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2020-04-11 10:25:35,536 SSD INFO: Start evaluating...\n",
-      "17936\n",
-      "Dataset loaded. Subset: val, number of images: 3588\n",
-      "2020-04-11 10:25:36,587 SSD.inference INFO: Evaluating waymo_val dataset(3588 images):\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 359/359 [00:17<00:00, 20.77it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2020-04-11 10:25:55,044 SSD.inference INFO: mAP: 0.2241\n",
-      "vehicle         : 0.3527\n",
-      "person          : 0.2167\n",
-      "sign            : nan\n",
-      "cyclist         : 0.1029\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'metrics': {'mAP': 0.2240843198741733,\n",
-       "   'vehicle': 0.35265326308389916,\n",
-       "   'person': 0.2167354375099781,\n",
-       "   'sign': nan,\n",
-       "   'cyclist': 0.10286425902864259}}]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "logger.info('Start evaluating...')\n",
     "torch.cuda.empty_cache()  # speed up evaluating after training finished\n",
